# LTL_CANOPIES_Synchronization_master_thesis

./: .gitignore  README.md
ROS1_code/: CMakeLists.txt  README.md  package.xml
ROS1_code/src/Davide_sync/: motion_action.py  motion_ts.py
ROS1_code/src/Davide_sync/old_models/: agent.py  motion_action.py  motion_ts.py
ROS1_code/src/Meng/: agent_model.py  agent_model_swap.py  new_plot.py  swap_plan.py  with_planner.py  with_planner_swap.py
ROS1_code/src/Meng/__MACOSX/: ._new_plot.py  ._with_planner.py  ._with_planner_swap.py
documentation/: LTL-Formula.md  Planner-Plugin.md  Transition-System-Definition.md
launch/: simple_goal_motion.launch
ltl_automaton_hil_mic/: README.md  package.xml
ltl_automaton_hil_mic/ltl_automaton_hil_mic/nodes/: vel_cmd_mix_initiative_controller.py
ltl_automaton_planner/: README.md
ltl_automaton_planner/ltl_automaton_planner/launch/: ltl_planner_example_launch.py  ltl_planner_test_launch.py
ltl_automaton_planner/ltl_automaton_planner/ltl_tools/: ltl2ba.py
ltl_automaton_planner/ltl_automaton_planner/nodes/: planner_node.py
ltl_automaton_std_transition_systems/: README.md  setup.py
ltl_automaton_std_transition_systems/ltl_automaton_std_transition_systems/nodes/: region_2d_pose_monitor.py
ltl_automaton_synchronization/: README.md  setup.py
ros2_ltl2ba/: README
ros2_ws/: commands.txt
ros2_ws/src/ltl_automaton_hil_mic/: package.xml  setup.cfg
ros2_ws/src/ltl_automaton_hil_mic/ltl_automaton_hil_mic/: trap_detection.py
ros2_ws/src/ltl_automaton_messages/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/ltl_automaton_messages/msg/: SynchroAgentConfirm.msg  (+3 more)
ros2_ws/src/ltl_automaton_msg_srv/: CMakeLists.txt  package.xml
ros2_ws/src/ltl_automaton_msg_srv/msg/: SynchroConfirm.msg  SynchroReply.msg
ros2_ws/src/ltl_automaton_msg_srv/srv/: FinishCollab.srv
ros2_ws/src/ltl_automaton_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/ltl_automaton_std_transition_systems/: package.xml  setup.cfg
ros2_ws/src/ltl_automaton_synchronization/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_ltl2ba/: CMakeLists.txt
ros2_ws/src/synchronization_experiments/: setup.cfg  setup.py
rosie_pick_and_place_interfaces/: CMakeLists.txt  package.xml
rosie_pick_and_place_interfaces/action/: Place.action  Test.action
src/: simple_waypoint_chaser.py
src/Davide_sync/: action_mod.py  agent.py  lexer.py  motion_action.py  parser.py
src/Meng/: agent_model.py  with_planner.py
src/Meng/P_MAS_TG/: discrete_plan.py
src/Meng/P_MAS_TG1/: ts.py
src/Meng/P_MAS_TG2/: planner.py
src/Meng/__MACOSX/: ._P_MAS_TG  .___init__.py  ._agent_model.py  ._agent_model_swap.py  ._swap_plan.py
src/ltl_automaton_hil_mic/: README.md
src/ltl_automaton_msg_srv/msg/: LTLStringList.msg
src/ltl_automaton_msg_srv/srv/: DynamicParameters.srv
src/ltl_automaton_planner/: setup.py
src/ltl_automaton_std_transition_systems/: README.md
src/ltl_automaton_synchronization/: package.xml
src/ros2_ltl2ba/: package.xml
src/rosie_pick_and_place_interfaces/action/: Pick.action
src/synchronization_experiments/: README.md  package.xml  setup.py
synchronization_experiments/: README.md
synchronization_experiments/results/paper/: multiple_plotter.py
synchronization_experiments/synchronization_experiments/nodes/: data_collector.py  rrc_sim.py
synchronization_experiments/synchronization_experiments/scripts/: launch_launch.sh  launch_multiple.sh  launch_p.sh  launch_t.sh  multi_agent_launch.py
(+226 files in other folders)
