<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltl2ba</name>
  <version>1.3.0</version>
  <description>A ROS2 package wrapping for the ltl2ba software by Dennis Oddoux and Paul Gastin </description>

  <maintainer email="dperon@kth.se">Davide Peron</maintainer>
  <author email="dperon@kth.se">Davide Peron</author>
  
  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
